stages/stage5/y.output
Terminals unused in grammar

   INC
   DEC
   AND
   OR


State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Program

    2 Program: GDeclBlock FDefBlock MainBlock
    3        | GDeclBlock MainBlock
    4        | MainBlock

    5 GDeclBlock: DECL GDeclList ENDDECL ';'
    6           | DECL ENDDECL ';'

    7 GDeclList: GDeclList GDecl
    8          | GDecl

    9 GDecl: Type GidList ';'

   10 Type: INT
   11     | STR

   12 $@1: %empty

   13 $@2: %empty

   14 $@3: %empty

   15 GDecl: TUPLE ID $@1 '(' $@2 ParamList $@3 ')' Tid ';'

   16 Tid: Tid ',' tid
   17    | tid

   18 tid: ID
   19    | MUL ID

   20 GidList: GidList ',' Gid
   21        | Gid

   22 Gid: ID
   23    | ID '[' NUM ']'
   24    | ID '[' NUM ']' '[' NUM ']'
   25    | MUL ID

   26 $@4: %empty

   27 $@5: %empty

   28 Gid: ID '(' $@4 ParamList $@5 ')'

   29 $@6: %empty

   30 $@7: %empty

   31 Gid: MUL ID '(' $@6 ParamList $@7 ')'

   32 FDefBlock: FDefBlock FDef
   33          | FDef

   34 $@8: %empty

   35 $@9: %empty

   36 $@10: %empty

   37 $@11: %empty

   38 FDef: Type ID '(' $@8 ParamList ')' $@9 '{' $@10 LDeclBlock $@11 Body '}'

   39 ParamList: ParamList ',' Param
   40          | Param
   41          | %empty

   42 Param: Type Pid

   43 Pid: ID
   44    | MUL ID

   45 LDeclBlock: DECL LDecList ENDDECL ';'
   46           | DECL ENDDECL ';'

   47 LDecList: LDecList LDecl
   48         | LDecl

   49 LDecl: Type IdList ';'

   50 IdList: IdList ',' Lid
   51       | Lid

   52 Lid: ID

   53 $@12: %empty

   54 $@13: %empty

   55 $@14: %empty

   56 MainBlock: INT MAIN $@12 '(' ')' '{' $@13 LDeclBlock $@14 Body '}'

   57 Body: BEG Slist END ';'
   58     | BEG END ';'

   59 Slist: Slist Stmt
   60      | Stmt

   61 Stmt: READ '(' id ')' ';'
   62     | WRITE '(' Arth ')' ';'
   63     | WRITE STRING ';'
   64     | id EQ Arth ';'
   65     | IF '(' Bool ')' THEN Slist ELSE Slist ENDIF ';'
   66     | IF '(' Bool ')' THEN Slist ENDIF ';'
   67     | WHILE '(' Bool ')' DO Slist ENDWHILE ';'
   68     | REPEAT Slist UNTIL '(' Bool ')' ';'
   69     | DO Slist WHILE '(' Bool ')' ';'
   70     | BREAK ';'
   71     | CONTINUE ';'
   72     | RETURN Arth ';'
   73     | BRKP ';'
   74     | EXIT ';'

   75 Arth: Arth PLUS Arth
   76     | Arth MINUS Arth
   77     | Arth MUL Arth
   78     | Arth DIV Arth
   79     | Arth MOD Arth
   80     | '(' Arth ')'
   81     | NUM
   82     | STRING
   83     | id
   84     | ID '(' ')'
   85     | ID '(' ArgList ')'

   86 ArgList: ArgList ',' Arth
   87        | Arth

   88 Bool: Arth LT Arth
   89     | Arth LE Arth
   90     | Arth GT Arth
   91     | Arth GE Arth
   92     | Arth EE Arth
   93     | Arth NE Arth

   94 id: ID
   95   | ID '[' Arth ']'
   96   | ID '[' NUM ']' '[' NUM ']'
   97   | MUL id
   98   | '&' id
   99   | ID '.' ID


Terminals, with rules where they appear

$end (0) 0
'&' (38) 98
'(' (40) 15 28 31 38 56 61 62 65 66 67 68 69 80 84 85
')' (41) 15 28 31 38 56 61 62 65 66 67 68 69 80 84 85
',' (44) 16 20 39 50 86
'.' (46) 99
';' (59) 5 6 9 15 45 46 49 57 58 61 62 63 64 65 66 67 68 69 70 71 72
    73 74
'[' (91) 23 24 95 96
']' (93) 23 24 95 96
'{' (123) 38 56
'}' (125) 38 56
error (256)
NUM (258) 23 24 81 96
ID (259) 15 18 19 22 23 24 25 28 31 38 43 44 52 84 85 94 95 96 99
STRING (260) 63 82
PLUS (261) 75
MINUS (262) 76
MUL (263) 19 25 31 44 77 97
DIV (264) 78
MOD (265) 79
EQ (266) 64
INC (267)
DEC (268)
BEG (269) 57 58
END (270) 57 58
READ (271) 61
WRITE (272) 62 63
IF (273) 65 66
THEN (274) 65 66
ELSE (275) 65
ENDIF (276) 65 66
WHILE (277) 67 69
DO (278) 67 69
ENDWHILE (279) 67
BREAK (280) 70
CONTINUE (281) 71
REPEAT (282) 68
UNTIL (283) 68
DECL (284) 5 6 45 46
ENDDECL (285) 5 6 45 46
INT (286) 10 56
STR (287) 11
TUPLE (288) 15
MAIN (289) 56
RETURN (290) 72
BRKP (291) 73
EXIT (292) 74
AND (293)
OR (294)
LT (295) 88
LE (296) 89
GT (297) 90
GE (298) 91
EE (299) 92
NE (300) 93


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
start (57)
    on left: 1, on right: 0
Program (58)
    on left: 2 3 4, on right: 1
GDeclBlock (59)
    on left: 5 6, on right: 2 3
GDeclList (60)
    on left: 7 8, on right: 5 7
GDecl (61)
    on left: 9 15, on right: 7 8
Type (62)
    on left: 10 11, on right: 9 38 42 49
$@1 (63)
    on left: 12, on right: 15
$@2 (64)
    on left: 13, on right: 15
$@3 (65)
    on left: 14, on right: 15
Tid (66)
    on left: 16 17, on right: 15 16
tid (67)
    on left: 18 19, on right: 16 17
GidList (68)
    on left: 20 21, on right: 9 20
Gid (69)
    on left: 22 23 24 25 28 31, on right: 20 21
$@4 (70)
    on left: 26, on right: 28
$@5 (71)
    on left: 27, on right: 28
$@6 (72)
    on left: 29, on right: 31
$@7 (73)
    on left: 30, on right: 31
FDefBlock (74)
    on left: 32 33, on right: 2 32
FDef (75)
    on left: 38, on right: 32 33
$@8 (76)
    on left: 34, on right: 38
$@9 (77)
    on left: 35, on right: 38
$@10 (78)
    on left: 36, on right: 38
$@11 (79)
    on left: 37, on right: 38
ParamList (80)
    on left: 39 40 41, on right: 15 28 31 38 39
Param (81)
    on left: 42, on right: 39 40
Pid (82)
    on left: 43 44, on right: 42
LDeclBlock (83)
    on left: 45 46, on right: 38 56
LDecList (84)
    on left: 47 48, on right: 45 47
LDecl (85)
    on left: 49, on right: 47 48
IdList (86)
    on left: 50 51, on right: 49 50
Lid (87)
    on left: 52, on right: 50 51
MainBlock (88)
    on left: 56, on right: 2 3 4
$@12 (89)
    on left: 53, on right: 56
$@13 (90)
    on left: 54, on right: 56
$@14 (91)
    on left: 55, on right: 56
Body (92)
    on left: 57 58, on right: 38 56
Slist (93)
    on left: 59 60, on right: 57 59 65 66 67 68 69
Stmt (94)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right: 59
    60
Arth (95)
    on left: 75 76 77 78 79 80 81 82 83 84 85, on right: 62 64 72 75
    76 77 78 79 80 86 87 88 89 90 91 92 93 95
ArgList (96)
    on left: 86 87, on right: 85 86
Bool (97)
    on left: 88 89 90 91 92 93, on right: 65 66 67 68 69
id (98)
    on left: 94 95 96 97 98 99, on right: 61 64 83 97 98


State 0

    0 $accept: . start $end

    DECL  shift, and go to state 1
    INT   shift, and go to state 2

    start       go to state 3
    Program     go to state 4
    GDeclBlock  go to state 5
    MainBlock   go to state 6


State 1

    5 GDeclBlock: DECL . GDeclList ENDDECL ';'
    6           | DECL . ENDDECL ';'

    ENDDECL  shift, and go to state 7
    INT      shift, and go to state 8
    STR      shift, and go to state 9
    TUPLE    shift, and go to state 10

    GDeclList  go to state 11
    GDecl      go to state 12
    Type       go to state 13


State 2

   56 MainBlock: INT . MAIN $@12 '(' ')' '{' $@13 LDeclBlock $@14 Body '}'

    MAIN  shift, and go to state 14


State 3

    0 $accept: start . $end

    $end  shift, and go to state 15


State 4

    1 start: Program .

    $default  reduce using rule 1 (start)


State 5

    2 Program: GDeclBlock . FDefBlock MainBlock
    3        | GDeclBlock . MainBlock

    INT  shift, and go to state 16
    STR  shift, and go to state 9

    Type       go to state 17
    FDefBlock  go to state 18
    FDef       go to state 19
    MainBlock  go to state 20


State 6

    4 Program: MainBlock .

    $default  reduce using rule 4 (Program)


State 7

    6 GDeclBlock: DECL ENDDECL . ';'

    ';'  shift, and go to state 21


State 8

   10 Type: INT .

    $default  reduce using rule 10 (Type)


State 9

   11 Type: STR .

    $default  reduce using rule 11 (Type)


State 10

   15 GDecl: TUPLE . ID $@1 '(' $@2 ParamList $@3 ')' Tid ';'

    ID  shift, and go to state 22


State 11

    5 GDeclBlock: DECL GDeclList . ENDDECL ';'
    7 GDeclList: GDeclList . GDecl

    ENDDECL  shift, and go to state 23
    INT      shift, and go to state 8
    STR      shift, and go to state 9
    TUPLE    shift, and go to state 10

    GDecl  go to state 24
    Type   go to state 13


State 12

    8 GDeclList: GDecl .

    $default  reduce using rule 8 (GDeclList)


State 13

    9 GDecl: Type . GidList ';'

    ID   shift, and go to state 25
    MUL  shift, and go to state 26

    GidList  go to state 27
    Gid      go to state 28


State 14

   56 MainBlock: INT MAIN . $@12 '(' ')' '{' $@13 LDeclBlock $@14 Body '}'

    $default  reduce using rule 53 ($@12)

    $@12  go to state 29


State 15

    0 $accept: start $end .

    $default  accept


State 16

   10 Type: INT .
   56 MainBlock: INT . MAIN $@12 '(' ')' '{' $@13 LDeclBlock $@14 Body '}'

    MAIN  shift, and go to state 14

    $default  reduce using rule 10 (Type)


State 17

   38 FDef: Type . ID '(' $@8 ParamList ')' $@9 '{' $@10 LDeclBlock $@11 Body '}'

    ID  shift, and go to state 30


State 18

    2 Program: GDeclBlock FDefBlock . MainBlock
   32 FDefBlock: FDefBlock . FDef

    INT  shift, and go to state 16
    STR  shift, and go to state 9

    Type       go to state 17
    FDef       go to state 31
    MainBlock  go to state 32


State 19

   33 FDefBlock: FDef .

    $default  reduce using rule 33 (FDefBlock)


State 20

    3 Program: GDeclBlock MainBlock .

    $default  reduce using rule 3 (Program)


State 21

    6 GDeclBlock: DECL ENDDECL ';' .

    $default  reduce using rule 6 (GDeclBlock)


State 22

   15 GDecl: TUPLE ID . $@1 '(' $@2 ParamList $@3 ')' Tid ';'

    $default  reduce using rule 12 ($@1)

    $@1  go to state 33


State 23

    5 GDeclBlock: DECL GDeclList ENDDECL . ';'

    ';'  shift, and go to state 34


State 24

    7 GDeclList: GDeclList GDecl .

    $default  reduce using rule 7 (GDeclList)


State 25

   22 Gid: ID .
   23    | ID . '[' NUM ']'
   24    | ID . '[' NUM ']' '[' NUM ']'
   28    | ID . '(' $@4 ParamList $@5 ')'

    '('  shift, and go to state 35
    '['  shift, and go to state 36

    $default  reduce using rule 22 (Gid)


State 26

   25 Gid: MUL . ID
   31    | MUL . ID '(' $@6 ParamList $@7 ')'

    ID  shift, and go to state 37


State 27

    9 GDecl: Type GidList . ';'
   20 GidList: GidList . ',' Gid

    ';'  shift, and go to state 38
    ','  shift, and go to state 39


State 28

   21 GidList: Gid .

    $default  reduce using rule 21 (GidList)


State 29

   56 MainBlock: INT MAIN $@12 . '(' ')' '{' $@13 LDeclBlock $@14 Body '}'

    '('  shift, and go to state 40


State 30

   38 FDef: Type ID . '(' $@8 ParamList ')' $@9 '{' $@10 LDeclBlock $@11 Body '}'

    '('  shift, and go to state 41


State 31

   32 FDefBlock: FDefBlock FDef .

    $default  reduce using rule 32 (FDefBlock)


State 32

    2 Program: GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 2 (Program)


State 33

   15 GDecl: TUPLE ID $@1 . '(' $@2 ParamList $@3 ')' Tid ';'

    '('  shift, and go to state 42


State 34

    5 GDeclBlock: DECL GDeclList ENDDECL ';' .

    $default  reduce using rule 5 (GDeclBlock)


State 35

   28 Gid: ID '(' . $@4 ParamList $@5 ')'

    $default  reduce using rule 26 ($@4)

    $@4  go to state 43


State 36

   23 Gid: ID '[' . NUM ']'
   24    | ID '[' . NUM ']' '[' NUM ']'

    NUM  shift, and go to state 44


State 37

   25 Gid: MUL ID .
   31    | MUL ID . '(' $@6 ParamList $@7 ')'

    '('  shift, and go to state 45

    $default  reduce using rule 25 (Gid)


State 38

    9 GDecl: Type GidList ';' .

    $default  reduce using rule 9 (GDecl)


State 39

   20 GidList: GidList ',' . Gid

    ID   shift, and go to state 25
    MUL  shift, and go to state 26

    Gid  go to state 46


State 40

   56 MainBlock: INT MAIN $@12 '(' . ')' '{' $@13 LDeclBlock $@14 Body '}'

    ')'  shift, and go to state 47


State 41

   38 FDef: Type ID '(' . $@8 ParamList ')' $@9 '{' $@10 LDeclBlock $@11 Body '}'

    $default  reduce using rule 34 ($@8)

    $@8  go to state 48


State 42

   15 GDecl: TUPLE ID $@1 '(' . $@2 ParamList $@3 ')' Tid ';'

    $default  reduce using rule 13 ($@2)

    $@2  go to state 49


State 43

   28 Gid: ID '(' $@4 . ParamList $@5 ')'

    INT  shift, and go to state 8
    STR  shift, and go to state 9

    $default  reduce using rule 41 (ParamList)

    Type       go to state 50
    ParamList  go to state 51
    Param      go to state 52


State 44

   23 Gid: ID '[' NUM . ']'
   24    | ID '[' NUM . ']' '[' NUM ']'

    ']'  shift, and go to state 53


State 45

   31 Gid: MUL ID '(' . $@6 ParamList $@7 ')'

    $default  reduce using rule 29 ($@6)

    $@6  go to state 54


State 46
